<resources>

    <string name="app_name">^-^Happy Queuing!!!^-^</string>
    <string name="hello_world">Hello!快来选择吃的地儿吧~</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">^-^Happy Queuing!!!^-^</string>
    <string name="welcome">^-^Welcome!^-^</string>
    <string name="send">快发送吧</string>
    <string name="cancel">不想吃了</string>
    <string name="detial">详情</string>
    <string name="reallyexit">确定要退出？</string>
    <string name="yes">退出</string>
    <string name="no">取消</string>
    <string name="refresh">刷新一下</string>
    <string name="join">去排队</string>
    <string name="back">再看看</string>
    <string name="signup">登陆</string>
    <string name="exit">注册</string>
    <string name="sucess1">登陆成功！</string>
    <string name="failed1">登陆失败！</string>
    <string name="sucess2">恭喜您注册成功！</string>
    <string name="failed2">注册失败！</string>
    <string name="OK">确定</string>
    <string name="tosignup">抢先登陆</string>
    <string name="sucess3">恭喜您排队成功！我们会提前通知您用餐！</string>
    <string name="failed3">抱歉,人数过多,排队失败！</string>
    <string name="failed4">抱歉,您已参加其他餐厅的排队！</string>

</resources>